--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -19,3 +19,11 @@ ui:
 antora:
   extensions:
   - require: '@antora/lunr-extension'
+asciidoc:
+  extensions:
+    - asciidoctor-kroki
+  attributes:
+    kroki-fetch-diagram: true
+    plantuml-server-url: https://plantuml.com/plantuml
+
+    
